[gd_scene load_steps=6 format=3 uid="uid://cynaphj5tfkt8"]

[ext_resource type="Script" uid="uid://b8yq8oyeptc1b" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="Script" uid="uid://dmjnnny14vhwg" path="res://Scenes/Main Menu Navigation.gd" id="2_n45e2"]
[ext_resource type="Script" uid="uid://xpjeycpbdum3" path="res://Scenes/Timer_Update.gd" id="3_1ehe0"]
[ext_resource type="Texture2D" uid="uid://k45of7rggveu" path="res://Assets/2D Assets/UIs/Timer_Icon.png" id="3_ce3w2"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1ehe0"]
properties/0/path = NodePath("Label:Total_Timer_in_Seconds")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Menu" type="Node"]
script = ExtResource("1_1ehe0")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://jfyf77tcbqro")
spawn_path = NodePath("../Level Spawner")
spawn_limit = 1

[node name="Level Spawner" type="Node" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_n45e2")

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]
follow_viewport_enabled = true

[node name="Title" type="Label" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.28
anchor_top = 0.158
anchor_right = 0.743
anchor_bottom = 0.743
offset_left = 61.68
offset_top = 27.36
offset_right = -99.2
offset_bottom = -42.84
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(307.5, 135)
theme_override_font_sizes/font_size = 69
text = "CARDS IMPACT"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Control/CanvasLayer/Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.271
anchor_top = 0.251
anchor_right = 0.676
anchor_bottom = 0.373
offset_left = 0.125992
offset_top = -0.101006
offset_right = 0.0559692
offset_bottom = 0.0769958
pivot_offset = Vector2(100, 11)
text = "A game by Killer and Gian"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.793
anchor_top = 0.712
anchor_right = 0.978
anchor_bottom = 0.82
offset_left = 0.439941
offset_top = 0.039978
offset_right = 0.239868
offset_bottom = 0.400024
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Exit" type="Button" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.839
anchor_top = 0.856
anchor_right = 0.936
anchor_bottom = 0.939
offset_left = 0.119873
offset_top = 0.519958
offset_right = 0.879883
offset_bottom = -0.120056
theme_override_font_sizes/font_size = 31
text = "Exit"

[node name="Single Or Multiplayer" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.314
anchor_right = 0.686
anchor_bottom = 1.0
offset_left = -0.880005
offset_right = 0.879883
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Single Or Multiplayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.326
anchor_top = 0.456
anchor_right = 0.674
anchor_bottom = 0.544
offset_left = -0.919983
offset_top = 0.519958
offset_right = 0.919922
offset_bottom = -0.52002
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Single player Button" type="Button" parent="Control/Single Or Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Single Player"

[node name="Multiplayer Button" type="Button" parent="Control/Single Or Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Multi Player"

[node name="Multiplayer Local or Steam" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchor_left = 0.223
anchor_right = 0.777
anchor_bottom = 1.0
offset_left = 0.839996
offset_right = -0.839966
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Multiplayer Local or Steam"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 625.0
offset_top = 493.0
offset_right = -625.0
offset_bottom = -493.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Public Multiplayer Button" type="Button" parent="Control/Multiplayer Local or Steam/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Public"

[node name="Local Multiplayer Button" type="Button" parent="Control/Multiplayer Local or Steam/VBoxContainer"]
layout_mode = 2
text = "Local"

[node name="Local Multiplayer" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchor_left = 0.221
anchor_right = 0.779
anchor_bottom = 1.0
offset_left = 0.679962
offset_right = -0.680054
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Local Multiplayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 625.0
offset_top = 493.0
offset_right = -625.0
offset_bottom = -493.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Host Local Buton" type="Button" parent="Control/Local Multiplayer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Host
"

[node name="Join Local Buton" type="Button" parent="Control/Local Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Public Multiplayer" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 499.0
offset_top = 357.0
offset_right = -499.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/Public Multiplayer"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.277
anchor_top = 0.187
anchor_right = 0.723
anchor_bottom = 0.867
offset_left = -0.114006
offset_top = 18.119
offset_right = 0.113983
offset_bottom = -0.721008
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Public Multiplayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Public Multiplayer/Panel/ScrollContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Public Multiplayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.446
anchor_right = 0.554
anchor_bottom = 0.112
offset_left = -0.212006
offset_top = 1.0
offset_right = 0.211975
offset_bottom = 0.0239944
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Host Multiplayer Steam Buton" type="Button" parent="Control/Public Multiplayer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Host
"

[node name="Join Multiplayer Steam Buton" type="Button" parent="Control/Public Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Refresh Lobby List" type="Button" parent="Control/Public Multiplayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.716
anchor_top = 0.136
anchor_right = 0.784
anchor_bottom = 0.178
offset_left = -0.152039
offset_top = -0.328003
offset_right = 0.151978
offset_bottom = 0.306
text = "Refresh"

[node name="Back to Start Menu" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.019
anchor_top = 0.906
anchor_right = 0.15
anchor_bottom = 0.978
offset_left = -36.48
offset_top = 101.52
offset_right = -288.0
offset_bottom = 23.76
grow_vertical = 0

[node name="Back to Start Menu Button" type="Button" parent="Control/Back to Start Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.895
anchor_right = 0.007
anchor_bottom = 0.895
offset_left = 31.0
offset_top = -106.0
offset_right = 286.0
offset_bottom = -19.0
text = "Back to Start Menu"

[node name="Timer" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Timer"]

[node name="Container" type="Container" parent="Timer/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -73.0
offset_top = 9.0
offset_right = -52.0
offset_bottom = 33.0
grow_horizontal = 0

[node name="Sprite2D" type="Sprite2D" parent="Timer/CanvasLayer/Container"]
position = Vector2(2.155, 0)
scale = Vector2(0.0882353, 0.0882353)
texture = ExtResource("3_ce3w2")
centered = false

[node name="Label" type="Label" parent="Timer/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.91
offset_top = 7.015
offset_right = -6.91003
offset_bottom = 36.015
grow_horizontal = 0
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_1ehe0")

[node name="One Second Timer" type="Timer" parent="Timer/CanvasLayer"]
autostart = true
ignore_time_scale = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Timer/CanvasLayer"]
replication_config = SubResource("SceneReplicationConfig_1ehe0")

[connection signal="pressed" from="Control/CanvasLayer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Control/Single Or Multiplayer/VBoxContainer/Multiplayer Button" to="Control" method="_on_multiplayer_selected"]
[connection signal="pressed" from="Control/Multiplayer Local or Steam/VBoxContainer/Public Multiplayer Button" to="Control" method="_on_public_multiplayer_clicked"]
[connection signal="pressed" from="Control/Multiplayer Local or Steam/VBoxContainer/Local Multiplayer Button" to="Control" method="_on_local_multiplayer_clicked"]
[connection signal="pressed" from="Control/Local Multiplayer/VBoxContainer/Host Local Buton" to="Control" method="_on_local_multiplayer_host"]
[connection signal="pressed" from="Control/Local Multiplayer/VBoxContainer/Join Local Buton" to="Control" method="_on_local_multiplayer_join"]
[connection signal="pressed" from="Control/Public Multiplayer/VBoxContainer/Host Multiplayer Steam Buton" to="Control" method="_on_public_multiplayer_host_clicked"]
[connection signal="pressed" from="Control/Public Multiplayer/VBoxContainer/Join Multiplayer Steam Buton" to="Control" method="_on_public_multiplayer_join_clicked"]
[connection signal="pressed" from="Control/Public Multiplayer/Refresh Lobby List" to="Control" method="refresh_lobby_list"]
[connection signal="pressed" from="Control/Back to Start Menu/Back to Start Menu Button" to="Control" method="_on_back_to_Start_menu_clicked"]
[connection signal="timeout" from="Timer/CanvasLayer/One Second Timer" to="Timer/CanvasLayer/Label" method="One_Second_Timer_Timeout"]
